--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -183,27 +183,29 @@
     <Compile Include="Graphics\Renderer\Lighting.cs" />
     <Compile Include="Graphics\Renderer\MotionBlur.cs" />
     <Compile Include="Graphics\Renderer\Overlays.cs" />
-	<Compile Include="Graphics\Renderer\Overlays.ATS.cs">
-		<DependentUpon>Overlays.cs</DependentUpon>
+    <Compile Include="Graphics\Renderer\Overlays.ATS.cs">
+      <DependentUpon>Overlays.cs</DependentUpon>
     </Compile>
     <Compile Include="Graphics\Renderer\Overlays.Debug.cs">
-		<DependentUpon>Overlays.cs</DependentUpon>
+      <DependentUpon>Overlays.cs</DependentUpon>
     </Compile>
     <Compile Include="Graphics\Renderer\Overlays.Functions.cs">
-		<DependentUpon>Overlays.cs</DependentUpon>
+      <DependentUpon>Overlays.cs</DependentUpon>
     </Compile>
     <Compile Include="Graphics\Renderer\Overlays.GameMessages.cs">
-		<DependentUpon>Overlays.cs</DependentUpon>
+      <DependentUpon>Overlays.cs</DependentUpon>
     </Compile>
     <Compile Include="Graphics\Renderer\Overlays.HUD.cs">
-		<DependentUpon>Overlays.cs</DependentUpon>
+      <DependentUpon>Overlays.cs</DependentUpon>
     </Compile>
     <Compile Include="Graphics\Renderer\Overlays.ScoreMessages.cs">
-		<DependentUpon>Overlays.cs</DependentUpon>
+      <DependentUpon>Overlays.cs</DependentUpon>
     </Compile>
     <Compile Include="Graphics\Renderer\Structures.cs" />
     <Compile Include="Graphics\Renderer\Objects.cs" />
     <Compile Include="Parsers\Object\Generic\WavefrontObjParser.cs" />
+    <Compile Include="Parsers\Object\MSTS\BinaryShapeParser.cs" />
+    <Compile Include="Parsers\Object\MSTS\Tokens.cs" />
     <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.ApplyRouteData.cs" />
     <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.CompatibilityObjects.cs" />
     <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.Expression.cs" />
