--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -387,6 +387,9 @@ package_other_directory = Carpeta d'instal·lació d'altres paquets:
 package_compression = Format de compressió dels paquets:
 page_previous = Pàgina anterior...
 page_next = Pàgina següent...
+kiosk_mode = Kiosk Mode
+kiosk_mode_enable = Enable Kiosk Mode
+kiosk_mode_timer = Control Timeout (s)
 
 [dialog]
 csvfiles = Fitxers CSV
