--- a/assets/Languages/de-DE.cfg
+++ b/assets/Languages/de-DE.cfg
@@ -383,6 +383,9 @@ package_other_directory = Installationsordner für sonstiges:
 package_compression = Paketkomprimierungsformat:
 page_previous = Vorige Seite...
 page_next = Nächste Seite...
+kiosk_mode = Kiosk Mode
+kiosk_mode_enable = Enable Kiosk Mode
+kiosk_mode_timer = Control Timeout (s)
 
 [dialog]
 csvfiles = CSV-Dateien (*.csv)
