--- a/assets/Languages/es-ES.cfg
+++ b/assets/Languages/es-ES.cfg
@@ -383,6 +383,9 @@ package_other_directory = Carpeta de instalación de otros paquetes:
 package_compression = Formato de compresión de los paquetes:
 page_previous = Página anterior...
 page_next = Página siguiente...
+kiosk_mode = Kiosk Mode
+kiosk_mode_enable = Enable Kiosk Mode
+kiosk_mode_timer = Control Timeout (s)
 
 [dialog]
 csvfiles = Archivos CSV
