--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -383,6 +383,9 @@ package_other_directory = Egyebek telepítési könyvtára:
 package_compression = Csomag tömörítésének formátuma:
 page_previous = Előző...
 page_next = Következő...
+kiosk_mode = Kiosk Mode
+kiosk_mode_enable = Enable Kiosk Mode
+kiosk_mode_timer = Control Timeout (s)
 
 [dialog]
 csvfiles = CSV fájl
