--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -385,6 +385,9 @@ package_other_directory = その他のアイテムのインストール場所:
 package_compression = パッケージの圧縮形式:
 page_previous = 前のページへ...
 page_next = 次のページへ...
+kiosk_mode = Kiosk Mode
+kiosk_mode_enable = Enable Kiosk Mode
+kiosk_mode_timer = Control Timeout (s)
 
 [dialog]
 csvfiles = CSVファイル
