--- a/assets/Languages/zh-CN.cfg
+++ b/assets/Languages/zh-CN.cfg
@@ -388,6 +388,9 @@ package_other_directory = 其他安装目录：
 package_compression = 扩展包压缩格式：
 page_previous = < 上一页
 page_next = 下一页 >
+kiosk_mode = Kiosk Mode
+kiosk_mode_enable = Enable Kiosk Mode
+kiosk_mode_timer = Control Timeout (s)
 
 [dialog]
 csvfiles = 逗号分隔文件
