New: Add plugin variable debug overlay (CTRL + F10)

--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -657,6 +657,7 @@ MISC_CPUMODE = Activa o desactiva el mode de CPU reduïda
 DEBUG_WIREFRAME = Activa o desactiva el mode de malla
 DEBUG_NORMALS = Mostra o oculta les normals dels vèrtexs
 DEBUG_BRAKE = Mostra o oculta la vista de depuració del sistema de fre
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Mostra o oculta la finestra d'informació de la ruta
 SHOW_EVENTS = Mostra o oculta els marcadors d'esdeveniment (per a desenvolupadors)
 
