--- a/assets/Languages/cs-CZ.cfg
+++ b/assets/Languages/cs-CZ.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Změna zatížení CPU
 DEBUG_WIREFRAME = Activace/deaktivace zobrazení síťového modelu
 DEBUG_NORMALS = Zobrazit/skrýt normálové vektory
 DEBUG_BRAKE = Zobrazit/skrýt stav brzd
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Zobrazit/skrýt okno informací o trati
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
