--- a/assets/Languages/de-CH.cfg
+++ b/assets/Languages/de-CH.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Aktiviert/Deaktiviert sparsame CPU-Nutzung
 DEBUG_WIREFRAME = Aktiviert/Deaktiviert Wireframe-Darstellung
 DEBUG_NORMALS = Zeigt/Versteckt die Anzeige der Normalenvektoren
 DEBUG_BRAKE = Zeigt/Versteckt die Debug-Anzeige für die Bremsen
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Zeigt/versteckt das Infofenster
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
