--- a/assets/Languages/en-US.cfg
+++ b/assets/Languages/en-US.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Switches to or from reduced CPU mode
 DEBUG_WIREFRAME = Activates or deactivates wireframe mode
 DEBUG_NORMALS = Shows or hides vertex normals
 DEBUG_BRAKE = Shows or hides brake system debug output
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Shows or hides the route information window
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
