--- a/assets/Languages/es-ES.cfg
+++ b/assets/Languages/es-ES.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Cambia el modo de CPU
 DEBUG_WIREFRAME = Activa/desactiva el modo malla (wireframe)
 DEBUG_NORMALS = Muestra/esconde las normales de los vértices
 DEBUG_BRAKE = Muestra/esconde el sistema de frenado
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Muestra u oculta la ventana de información de la ruta
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
