--- a/assets/Languages/fi-FI.cfg
+++ b/assets/Languages/fi-FI.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Vaihtaa alennettuun CPU-tilaan tai pois
 DEBUG_WIREFRAME = Aktivoi tai poistaa wireframe-tilan
 DEBUG_NORMALS = Näyttää tai piilottaa vikanäytön
 DEBUG_BRAKE = Näyttää tai piilottaa jarrujärjestelmän viat
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Shows or hides the route information window
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
