--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Csökkentett processzor mód be/ki kapcsolása
 DEBUG_WIREFRAME = Wireframe mód be/ki kapcsolása
 DEBUG_NORMALS = Normálvektorok megjelenítése/elrejtése
 DEBUG_BRAKE = A fékrendszer hibakereső adatainak megjelenítése/elrejtése
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Megjeleníti vagy elrejti a pályainformációs ablakot
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
