--- a/assets/Languages/it-IT.cfg
+++ b/assets/Languages/it-IT.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Attiva / disattiva l'uso ridotto della CPU
 DEBUG_WIREFRAME = Attiva / disattiva la modalità wireframe
 DEBUG_NORMALS = Visualizza / nasconde l'indicazione delle normali
 DEBUG_BRAKE = Visualizza / nasconde lo stato del sistema frenante
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Visualizza / nasconde la finestra delle informazioni sulla linea
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
