--- a/assets/Languages/nl-NL.cfg
+++ b/assets/Languages/nl-NL.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Schakelt van of naar gereduceerde-CPU-modus
 DEBUG_WIREFRAME = Activeert of deaciveert draadrastermodus
 DEBUG_NORMALS = Laat vertex normals zien of verbergt deze
 DEBUG_BRAKE = Laat remsysteem debug output zien of verberg deze
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Shows or hides the route information window
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
