--- a/assets/Languages/pl-PL.cfg
+++ b/assets/Languages/pl-PL.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Przełączanie tryb pracy CPU
 DEBUG_WIREFRAME = Aktywacja/Dezaktywacja sitaki
 DEBUG_NORMALS = Pokaz/Ukryj vertexy
 DEBUG_BRAKE = Pokaz/ukryj system hamulców
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Pokazuje/ukrywa okienko z informacjami
 SHOW_EVENTS = Wyświetla lub ukrywa znaczniki zdarzeń (dla programistów)
 
