--- a/assets/Languages/pt-PT.cfg
+++ b/assets/Languages/pt-PT.cfg
@@ -657,6 +657,7 @@ MISC_CPUMODE = Liga ou desliga o modo reduzido da CPU
 DEBUG_WIREFRAME = Activa ou desactiva o modo "vêr grelha"
 DEBUG_NORMALS = Mostra ou esconde a posição dos "vértices"
 DEBUG_BRAKE = Mostra ou esconde o estado do sistema de travagem
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Mostra ou esconde a janela de informação da linha
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
