--- a/assets/Languages/ru-RU.cfg
+++ b/assets/Languages/ru-RU.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Включить/выключить пониженный расх
 DEBUG_WIREFRAME = Включить/выключить сеточный вид
 DEBUG_NORMALS = Включить/выключить отображение нормалей
 DEBUG_BRAKE = Включить/выключить отображение отладочного режима тормозной системы
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Shows or hides the route information window
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
