--- a/assets/Languages/uk-UA.cfg
+++ b/assets/Languages/uk-UA.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Переключити режим роботи CPU
 DEBUG_WIREFRAME = Активація/Деактивація каркасу
 DEBUG_NORMALS = Показати/сховати вертекси
 DEBUG_BRAKE = Показати/сховати систему гальм
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Shows or hides the route information window
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
