--- a/assets/Languages/zh-CN.cfg
+++ b/assets/Languages/zh-CN.cfg
@@ -658,6 +658,7 @@ MISC_CPUMODE = 切换低处理器利用模式
 DEBUG_WIREFRAME = 切换线框描绘
 DEBUG_NORMALS = 切换顶点法线
 DEBUG_BRAKE = 切换制动调试信息
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = 切换线路信息
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
