--- a/assets/Languages/fr-FR.cfg
+++ b/assets/Languages/fr-FR.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Active/désactive le mode d'utilisation basse du CPU
 DEBUG_WIREFRAME = Active/désactive la représentation en fil de fer
 DEBUG_NORMALS = Active/désactive l'affichage des normales des vertex
 DEBUG_BRAKE = Active/désactive l'affichage des informations de débogage du système de freinage
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Shows or hides the route information window
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
