--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -656,6 +656,7 @@ MISC_CPUMODE = ＣＰＵ負荷切替
 DEBUG_WIREFRAME = ワイヤフレーム切替
 DEBUG_NORMALS = 頂点法線切替
 DEBUG_BRAKE = ブレーキデバッグ切替
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION =  路線の勾配/線形情報ウインドウの表示と切り替え 
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
