--- a/assets/Languages/ko-KR.cfg
+++ b/assets/Languages/ko-KR.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = CPU 부하 보이기/숨기기
 DEBUG_WIREFRAME = 와이어 프레임 보이기/숨기기
 DEBUG_NORMALS = 정점 법선 보이기/숨기기
 DEBUG_BRAKE = 브레이크 디버그 보이기/숨기기
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Shows or hides the route information window
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
