--- a/assets/Languages/pt-BR.cfg
+++ b/assets/Languages/pt-BR.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Liga ou desliga o modo reduzido da CPU
 DEBUG_WIREFRAME = Ativa ou desativa o modo "wireframe"
 DEBUG_NORMALS = Mostra ou esconde a posição dos "vertex"
 DEBUG_BRAKE = Mostra ou esconde o estado do sistema de freagem
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Shows or hides the route information window
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
