--- a/assets/Languages/ro-RO.cfg
+++ b/assets/Languages/ro-RO.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = Comută în modul CPU Redus.
 DEBUG_WIREFRAME = Activează sau dezactivează modul Wireframe
 DEBUG_NORMALS = Afisează sau ascunde colţurile normale.
 DEBUG_BRAKE = Afişează sau ascunde interfaţa sistemului de frânare.
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Shows or hides the route information window
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
