--- a/assets/Languages/zh-TW.cfg
+++ b/assets/Languages/zh-TW.cfg
@@ -653,6 +653,7 @@ MISC_CPUMODE = 啟動或關閉降低 CPU 資源模式
 DEBUG_WIREFRAME = 啟動或關閉線框描繪
 DEBUG_NORMALS = 顯示或隱藏頂點法線
 DEBUG_BRAKE = 顯示或隱藏制動系統除錯輸出
+DEBUG_ATS = Shows or hides plugin debug output
 ROUTE_INFORMATION = Shows or hides the route information window
 SHOW_EVENTS = Shows or hides event markers (For developers)
 
