--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -1,5 +1,5 @@
 ﻿﻿; openBVE interface language configuration file
-; last updated: 2018-02-09
+; last updated: 2018-06-12
 ; by Marc Riera Irigoyen
 
 [program]
@@ -387,9 +387,9 @@ package_other_directory = Carpeta d'instal·lació d'altres paquets:
 package_compression = Format de compressió dels paquets:
 page_previous = Pàgina anterior...
 page_next = Pàgina següent...
-kiosk_mode = Kiosk Mode
-kiosk_mode_enable = Enable Kiosk Mode
-kiosk_mode_timer = Control Timeout (s)
+kiosk_mode = Mode quiosc
+kiosk_mode_enable = Activa el mode quiosc
+kiosk_mode_timer = Temps d'espera de control (segons)
 
 [dialog]
 csvfiles = Fitxers CSV
@@ -657,7 +657,7 @@ MISC_CPUMODE = Activa o desactiva el mode de CPU reduïda
 DEBUG_WIREFRAME = Activa o desactiva el mode de malla
 DEBUG_NORMALS = Mostra o oculta les normals dels vèrtexs
 DEBUG_BRAKE = Mostra o oculta la vista de depuració del sistema de fre
-DEBUG_ATS = Shows or hides plugin debug output
+DEBUG_ATS = Mostra o oculta la sortida de depuració de l'extensió
 ROUTE_INFORMATION = Mostra o oculta la finestra d'informació de la ruta
 SHOW_EVENTS = Mostra o oculta els marcadors d'esdeveniment (per a desenvolupadors)
 
