Change: Tweak error handling in ATSPluginProxy
This fixes certain combinations of OS_ATS / Windows versions not working correctly, and hopefully makes it less likely that a Win32 plugin failing to load will take down the entire game

--- a/source/Plugins/AtsPluginProxy/AtsPluginProxy/AtsPluginProxy.vcxproj
+++ b/source/Plugins/AtsPluginProxy/AtsPluginProxy/AtsPluginProxy.vcxproj
@@ -131,6 +131,8 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;ATSPLUGINPROXY_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <ExceptionHandling>Async</ExceptionHandling>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
