--- a/source/Plugins/Sound.MP3/Sound.MP3.csproj
+++ b/source/Plugins/Sound.MP3/Sound.MP3.csproj
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{67418D38-1E2E-4944-A1B0-09E00FC2D055}</ProjectGuid>
+    <ProjectGuid>{A2FC4D71-1ED9-40D4-B746-FE6AB3C7D55E}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>Library</OutputType>
     <RootNamespace>Plugin</RootNamespace>
-    <AssemblyName>Sound.RiffWave</AssemblyName>
+    <AssemblyName>Sound.MP3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Administrator\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
@@ -50,8 +50,7 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Reference Include="NAudio, Version=1.8.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="NAudio">
       <HintPath>..\..\..\dependencies\NAudio.dll</HintPath>
       <Private>False</Private>
     </Reference>
