New: Add large HUD & option to choose size

--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -390,6 +390,10 @@ page_next = Pàgina següent...
 kiosk_mode = Mode quiosc
 kiosk_mode_enable = Activa el mode quiosc
 kiosk_mode_timer = Temps d'espera de control (segons)
+hud_size = HUD Size
+hud_size_small = Small
+hud_size_normal = Normal
+hud_size_large = Large
 
 [dialog]
 csvfiles = Fitxers CSV
