--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -386,6 +386,10 @@ page_next = Következő...
 kiosk_mode = Kiosk Mode
 kiosk_mode_enable = Enable Kiosk Mode
 kiosk_mode_timer = Control Timeout (s)
+hud_size = HUD Size
+hud_size_small = Small
+hud_size_normal = Normal
+hud_size_large = Large
 
 [dialog]
 csvfiles = CSV fájl
