--- a/assets/Languages/zh-CN.cfg
+++ b/assets/Languages/zh-CN.cfg
@@ -391,6 +391,10 @@ page_next = 下一页 >
 kiosk_mode = Kiosk Mode
 kiosk_mode_enable = Enable Kiosk Mode
 kiosk_mode_timer = Control Timeout (s)
+hud_size = HUD Size
+hud_size_small = Small
+hud_size_normal = Normal
+hud_size_large = Large
 
 [dialog]
 csvfiles = 逗号分隔文件
