Fix: Some untranslateable strings on the options page

--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -291,6 +291,11 @@ assignment_invalid = Sense assignar
 assignment_separator = ,\x20
 
 [raildriver]
+speedunits = LED Display speed units
+milesperhour = Miles per Hour (MPH)
+kilometersperhour = Kilometers per Hour (KPH)
+setcalibration = Set Calibration:
+launch = Launch
 notdetected = No s'ha detectat cap dispositiu RailDriver.
 config_error = S'ha produït un error en carregar el fitxer de calibratge de RailDriver.
 calibration_start = Seleccioneu "Següent" per començar el calibratge.
