--- a/assets/Languages/fr-FR.cfg
+++ b/assets/Languages/fr-FR.cfg
@@ -287,6 +287,11 @@ assignment_invalid = Non attribué
 assignment_separator = ,\x20
 
 [raildriver]
+speedunits = LED Display speed units
+milesperhour = Miles per Hour (MPH)
+kilometersperhour = Kilometers per Hour (KPH)
+setcalibration = Set Calibration:
+launch = Launch
 notdetected = No RailDriver conrollers detected.
 config_error = Error loading RailDriver calibration file.
 calibration_start = Please press 'Next' to start calibration.
