--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -287,6 +287,11 @@ assignment_invalid = Nincs hozzárendelve
 assignment_separator = ,\x20
 
 [raildriver]
+speedunits = LED Display speed units
+milesperhour = Miles per Hour (MPH)
+kilometersperhour = Kilometers per Hour (KPH)
+setcalibration = Set Calibration:
+launch = Launch
 notdetected = Nem érzékelhető RailDriver.
 config_error = Hiba a RailDriver kalibrációs fájl betöltésekor.
 calibration_start = Kattintson a 'Next' gombra a kalibrálás megkezdéséhez.
