--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -288,7 +288,11 @@ assignment_invalid = 未割当
 assignment_separator = ,\x20
 
 [raildriver]
-
+speedunits = LED Display speed units
+milesperhour = Miles per Hour (MPH)
+kilometersperhour = Kilometers per Hour (KPH)
+setcalibration = Set Calibration:
+launch = Launch
 notdetected = RailDriverのコントローラーを検出できませんでした。
 config_error = RailDriverのキャリブレーションファイルの読み込み中にエラーが発生しました。
 calibration_start = 「次へ」をクリックするとキャリブレーションを開始します。.
