--- a/assets/Languages/pl-PL.cfg
+++ b/assets/Languages/pl-PL.cfg
@@ -287,6 +287,11 @@ assignment_invalid = Nie przypisano
 assignment_separator = ,\x20
 
 [raildriver]
+speedunits = LED Display speed units
+milesperhour = Miles per Hour (MPH)
+kilometersperhour = Kilometers per Hour (KPH)
+setcalibration = Set Calibration:
+launch = Launch
 notdetected = Nie wykryto kontrolera RailDriver.
 config_error = Błąd wczytywania pliku kalibracji RailDriver.
 calibration_start = Wciśnij 'Dalej' aby rozpocząć kalibrację.
