--- a/assets/Languages/zh-CN.cfg
+++ b/assets/Languages/zh-CN.cfg
@@ -292,6 +292,11 @@ assignment_invalid = 未定义
 assignment_separator = 、
 
 [raildriver]
+speedunits = LED Display speed units
+milesperhour = Miles per Hour (MPH)
+kilometersperhour = Kilometers per Hour (KPH)
+setcalibration = Set Calibration:
+launch = Launch
 notdetected = 未检测到RailDriver控制器。
 config_error = 在加载RailDriver校准配置时出现错误。
 calibration_start = 按‘继续’开始校准。
