--- a/assets/Languages/de-DE.cfg
+++ b/assets/Languages/de-DE.cfg
@@ -287,6 +287,11 @@ assignment_invalid = Nicht zugeordnet
 assignment_separator = ,\x20
 
 [raildriver]
+speedunits = LED Display speed units
+milesperhour = Miles per Hour (MPH)
+kilometersperhour = Kilometers per Hour (KPH)
+setcalibration = Set Calibration:
+launch = Launch
 notdetected = Kein RailDriver erkannt.
 config_error = Fehler beim Laden der RailDriver-Konfigurationsdatei.
 calibration_start = Bitte "weiter" drücken zum Start der Kalibrierung.
