Change: Two untranslateable strings in options

--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -1,5 +1,5 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2018-08-13
+; last updated: 2018-08-16
 ; by Phonteus Nevolius
 
 [program]
@@ -287,11 +287,11 @@ assignment_invalid = Nincs hozzárendelve
 assignment_separator = ,\x20
 
 [raildriver]
-speedunits = LED Display speed units
-milesperhour = Miles per Hour (MPH)
-kilometersperhour = Kilometers per Hour (KPH)
-setcalibration = Set Calibration:
-launch = Launch
+speedunits = Kijelzőn sebesség egysége
+milesperhour = Mérföld per óra (MPH)
+kilometersperhour = Kilométer per óra (km/h)
+setcalibration = Kalibrálás:
+launch = Indítás
 notdetected = Nem érzékelhető RailDriver.
 config_error = Hiba a RailDriver kalibrációs fájl betöltésekor.
 calibration_start = Kattintson a 'Next' gombra a kalibrálás megkezdéséhez.
@@ -356,7 +356,7 @@ misc_simulation_toppling = Felborulás
 misc_simulation_collisions = Ütközés
 misc_simulation_derailments = Kisiklás
 misc_simulation_blackbox = Fekete doboz
-misc_simulation_loadingsway = Enable loading sway
+misc_simulation_loadingsway = Kocsik lengése (utascs.)
 misc_controls = Irányítás
 misc_controls_joysticks = Joystick engedélyezése
 misc_controls_threshold = Joystick küszöb:
@@ -391,6 +391,12 @@ page_next = Következő...
 kiosk_mode = Bemutató mód
 kiosk_mode_enable = Bemutató mód bekapcsolása
 kiosk_mode_timer = Időzítés (mp)
+hud_size = HUD Size
+hud_size_small = Small
+hud_size_normal = Normal
+hud_size_large = Large
+transparencyfix = Attempt to fix transparency issues in older content.
+hacks_enable = Enable hacks for buggy older content.
 
 [dialog]
 csvfiles = CSV fájl
