--- a/assets/Languages/ru-RU.cfg
+++ b/assets/Languages/ru-RU.cfg
@@ -395,6 +395,8 @@ hud_size = HUD Size
 hud_size_small = Small
 hud_size_normal = Normal
 hud_size_large = Large
+transparencyfix = Attempt to fix transparency issues in older content.
+hacks_enable = Enable hacks for buggy older content.
 
 [dialog]
 csvfiles = Файлы CSV
