--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -1,5 +1,5 @@
 ﻿﻿; openBVE interface language configuration file
-; last updated: 2018-06-12
+; last updated: 2018-08-20
 ; by Marc Riera Irigoyen
 
 [program]
@@ -291,11 +291,11 @@ assignment_invalid = Sense assignar
 assignment_separator = ,\x20
 
 [raildriver]
-speedunits = LED Display speed units
-milesperhour = Miles per Hour (MPH)
-kilometersperhour = Kilometers per Hour (KPH)
-setcalibration = Set Calibration:
-launch = Launch
+speedunits = Unitat de velocitat de la pantalla LED
+milesperhour = Milles per hora (mph)
+kilometersperhour = Quilòmetres per hora (km/h)
+setcalibration = Estableix el calibratge:
+launch = Comença
 notdetected = No s'ha detectat cap dispositiu RailDriver.
 config_error = S'ha produït un error en carregar el fitxer de calibratge de RailDriver.
 calibration_start = Seleccioneu "Següent" per començar el calibratge.
@@ -395,12 +395,12 @@ page_next = Pàgina següent...
 kiosk_mode = Mode quiosc
 kiosk_mode_enable = Activa el mode quiosc
 kiosk_mode_timer = Temps d'espera de control (segons)
-hud_size = HUD Size
-hud_size_small = Small
+hud_size = Mida de la interfície
+hud_size_small = Petita
 hud_size_normal = Normal
-hud_size_large = Large
-transparencyfix = Attempt to fix transparency issues in older content.
-hacks_enable = Enable hacks for buggy older content.
+hud_size_large = Gran
+transparencyfix = Intenta corregir els errors de transparència en continguts antics.
+hacks_enable = Activa les modificacions per a continguts antics amb errors.
 
 [dialog]
 csvfiles = Fitxers CSV
