New: Add display remain distance to the next pass/stop station

--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -655,6 +655,7 @@ MENU_BACK = Torna enrere al menú intern
 MISC_CLOCK = Mostra o oculta el rellotge
 MISC_SPEED = Canvia entre diferents modes de visualització de la velocitat
 MISC_GRADIENT = Canvia entre diferents modes de visualització de la rasant
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Canvia entre diferents factors d'acceleració temporal
 MISC_FPS = Mostra o oculta el nombre de fotogrames per segon
 MISC_AI = Activa o desactiva la intel·ligència artificial (IA)
