--- a/assets/Languages/en-US.cfg
+++ b/assets/Languages/en-US.cfg
@@ -651,6 +651,7 @@ MENU_BACK = Goes back within the in-game menu
 MISC_CLOCK = Shows or hides the clock
 MISC_SPEED = Toggles through different speed display modes
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Toggles through different time acceleration factors
 MISC_FPS = Shows or hides the frame rate display
 MISC_AI = Activates or deactivates the virtual driver (AI)
