--- a/assets/Languages/es-ES.cfg
+++ b/assets/Languages/es-ES.cfg
@@ -651,6 +651,7 @@ MENU_BACK = Retrocede en el menú del juego
 MISC_CLOCK = Muestra/oculta el reloj
 MISC_SPEED = Muestra diferentes informaciones de velocidad
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Muestra distintos factores de aceleración
 MISC_FPS = Muestra/oculta la frecuencia de imágenes (framerate)
 MISC_AI = Activa/desactiva el piloto virtual/automático (IA)
