--- a/assets/Languages/fr-FR.cfg
+++ b/assets/Languages/fr-FR.cfg
@@ -651,6 +651,7 @@ MENU_BACK = Retourne dans le menu du jeu
 MISC_CLOCK = Active/désactive l'affichage de l'horloge
 MISC_SPEED = Permute entre les différents modes d'affichage de la vitesse
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Permute entre les différents facteurs d'accélération temporelle
 MISC_FPS = Active/désactive l'affichage du taux d'images par seconde
 MISC_AI = Active/désactive le pilotage automatique
