--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -651,6 +651,7 @@ MENU_BACK = Visszalép a játék közbeni menüben
 MISC_CLOCK = Óra megjelenítése/elrejtése
 MISC_SPEED = Váltogatés a sebességkijelző különböző működési módjai között
 MISC_GRADIENT = Váltás különböző lejtviszony kijelzési módok között
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Váltogatás különböző időgyorsító módok közt
 MISC_FPS = A képfrissítés értékének (fps) megjelenítése/elrejtése
 MISC_AI = Robotpilóta be/ki kapcsolása
