--- a/assets/Languages/it-IT.cfg
+++ b/assets/Languages/it-IT.cfg
@@ -651,6 +651,7 @@ MENU_BACK = Esce dal menu di gioco
 MISC_CLOCK = Mostra o nasconde l'orologio
 MISC_SPEED = Commuta tra i differenti modi di visualizzazione della velocità
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Commuta tra diversi fattori di accelerazione del tempo
 MISC_FPS = Visualizza o nasconde il valore di frame rate
 MISC_AI = Attiva o disattiva il pilota automatico (AI)
