--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -1,6 +1,6 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2017-09-16
-; by  F81_tec200, Midnight Express Ginga81(ginga81)
+; last updated: 2018-08-26
+; by  F81_tec200, Midnight Express Ginga81(ginga81), S520
 
 [program]
 title = openBVE
@@ -653,6 +653,7 @@ MENU_BACK = ゲーム内メニュー・戻り
 MISC_CLOCK = 時計表示切替
 MISC_SPEED = 速度表示切替
 MISC_GRADIENT = 勾配表示モードの切り替え
+MISC_DIST_NEXT_STATION = 次駅までの残り距離表示切替
 MISC_TIMEFACTOR = 時間加速係数切替
 MISC_FPS = フレームレート表示切替
 MISC_AI = ＡＩ運転切替
