--- a/assets/Languages/nl-NL.cfg
+++ b/assets/Languages/nl-NL.cfg
@@ -651,6 +651,7 @@ MENU_BACK = Gaat terug in het menu in de rijmodus
 MISC_CLOCK = Opent of verbergt de klok
 MISC_SPEED = Schakelt tussen verschillende snelheidsdisplaymodi
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Schakelt tussen verschillende waarden van tijdsversnelling
 MISC_FPS = Opent of verbergt het beeldsnelheidsdisplay
 MISC_AI = Activeert of deaciveert de virtuele machinist (AI)
