--- a/assets/Languages/pl-PL.cfg
+++ b/assets/Languages/pl-PL.cfg
@@ -651,6 +651,7 @@ MENU_BACK = Wróć do poprzedniej pozycji w menu gry
 MISC_CLOCK = Pokaż/schowaj zegar
 MISC_SPEED = Przełącza pomiędzy innymi trybami wyświetlania prędkości
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Czynniki czasu przyśpieszenia
 MISC_FPS = Włącza albo wyłącza pokazywanie FPS
 MISC_AI = Aktywuj/Dezaktywuj Autopilota(AI)
