--- a/assets/Languages/ru-RU.cfg
+++ b/assets/Languages/ru-RU.cfg
@@ -651,6 +651,7 @@ MENU_BACK = Меню: назад
 MISC_CLOCK = Показать часы
 MISC_SPEED = Переключение между режимами отображения скорости
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Переключение масштаба ускорения времени
 MISC_FPS = Показать/убрать кадры в секунду (FPS)
 MISC_AI = Включить/выключить Машиниста ИИ
