--- a/assets/Languages/zh-CN.cfg
+++ b/assets/Languages/zh-CN.cfg
@@ -656,6 +656,7 @@ MENU_BACK = 游戏菜单返回
 MISC_CLOCK = 切换时间显示
 MISC_SPEED = 切换速度显示
 MISC_GRADIENT = 切换坡度显示
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = 切换时间倍速
 MISC_FPS = 切换FPS(帧率)显示
 MISC_AI = 切换AI驾驶
