--- a/assets/Languages/de-CH.cfg
+++ b/assets/Languages/de-CH.cfg
@@ -651,6 +651,7 @@ MENU_BACK = Geht im Ingame-Menü einen Schritt zurück
 MISC_CLOCK = Zeigt/Versteckt die Uhr
 MISC_SPEED = Wechselt die Darstellung der Geschwindigkeitsanzeige
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Wechselt den Zeitraffungsfaktor
 MISC_FPS = Aktiviert/Deaktiviert die Frameratenanzeige
 MISC_AI = Aktiviert/Deaktiviert den Autopiloten
