--- a/assets/Languages/pt-BR.cfg
+++ b/assets/Languages/pt-BR.cfg
@@ -651,6 +651,7 @@ MENU_BACK = Volta atrás no menu do jogo
 MISC_CLOCK = Mostra ou esconde o relógio
 MISC_SPEED = Alterna entre diferentes modos de velocidade de visualização
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Toggles through different time acceleration factors
 MISC_FPS = Mostra ou esconde o frame rate
 MISC_AI = Ativa ou desativa o virtual driver (AI)
