--- a/assets/Languages/pt-PT.cfg
+++ b/assets/Languages/pt-PT.cfg
@@ -655,6 +655,7 @@ MENU_BACK = Volta atrás no menú do jogo
 MISC_CLOCK = Mostra ou esconde o relógio
 MISC_SPEED = Alterna entre diferentes modos de velocidade de visualização
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Alterna entre diferentes factores de aceleração do tempo
 MISC_FPS = Liga e desliga a visualização da cadência de quadros
 MISC_AI = Activa ou desactiva o controlador virtual (AI)
