--- a/assets/Languages/uk-UA.cfg
+++ b/assets/Languages/uk-UA.cfg
@@ -651,6 +651,7 @@ MENU_BACK = Повернутися до попередньої позиції в
 MISC_CLOCK = Показати/сховати годинник
 MISC_SPEED = Перемикання між іншими режимами показу швидкості
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = Чинники часу прискорення
 MISC_FPS = Увімкнення або вимкнення показу FPS
 MISC_AI = Активувати/Деактивувати Автопілот(AI)
