--- a/assets/Languages/zh-HK.cfg
+++ b/assets/Languages/zh-HK.cfg
@@ -651,6 +651,7 @@ MENU_BACK = 在遊戲選單中返回
 MISC_CLOCK = 顯示或隱藏時鐘
 MISC_SPEED = 切換到不同的車速顯示模式
 MISC_GRADIENT = Toggles through different gradient display modes
+MISC_DIST_NEXT_STATION = Toggles through different next station remain distance display modes
 MISC_TIMEFACTOR = 切換到不同的時間速度
 MISC_FPS = 顯示或隱藏幀率
 MISC_AI = 啟動或關閉人工智能司機
