Change: Update hu-HU translation

--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -1,5 +1,5 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2018-08-16
+; last updated: 2018-08-20
 ; by Phonteus Nevolius
 
 [program]
@@ -391,12 +391,12 @@ page_next = Következő...
 kiosk_mode = Bemutató mód
 kiosk_mode_enable = Bemutató mód bekapcsolása
 kiosk_mode_timer = Időzítés (mp)
-hud_size = HUD Size
-hud_size_small = Small
-hud_size_normal = Normal
-hud_size_large = Large
-transparencyfix = Attempt to fix transparency issues in older content.
-hacks_enable = Enable hacks for buggy older content.
+hud_size = HUD méret
+hud_size_small = Kicsi
+hud_size_normal = Normál
+hud_size_large = Nagy
+transparencyfix = Átlátszósági hibák javítása régi pályákban/vonatokban
+hacks_enable = Régi hibás pályák/vonatok helyes megjelenítése
 
 [dialog]
 csvfiles = CSV fájl
